# booking_vr_system_V2

./: BuildStartRelease.sh  CMakeLists.txt  CmakeLists.txt  log_duration.h  valgrind_without_sqp_openSSL.txt
games/: games.conf
html/: CloseArenaCS.html  CloseArenaMJ.html  Cubes.html  OpenArenaCS.html  OpenArenaInsert.html  OpenArenaMJ.html  OpenArenaQuest.html  OpenArenaShooter.html  index.html  index2.html  index3.html  index4.html  styles.css
html/css/: datepicker-custom.css  style.css
html/css/styles/: animations.css  base.css  buttons.css  forms.css  grid.css  loading.css  responsive.css  typography.css
html/js/: arena.js  availability.js  availability_arena.js  availability_cubes.js  button_data.js  buttons.js  buttons_arena.js  buttons_cubes.js  cubes.js  date.js  datepicker.js  deleteHistoryUrl.js  localization_calendar.js  main.js  overlay.js  price.js  priceDisplay.js  script_add_book.js  script_add_book_arena.js  script_add_book_cubes.js  script_button_text.js  websocket.js
html/new adm/: adm.html  admArena.html  admCubes.html  index.html
html/new adm/css/: auth.css  base.css  calendar.css  controls.css  header.css  layout.css  main.css  modal.css  responsive.css  sidebar.css  table.css  theme-toggle.css  variables.css
html/new adm/js/: buttons.js  calendar.js  getAdminBooking.js  (+6 more)
include/: Connect_to_DB.h  booking_vr.h  domain.h  email.h  https_server.h  logger.h  parseInpudData.h  requests_handler.h  websocket.h
js/: script_add_booking.js  script_button_text_box.js
source/: Connect_to_DB.cpp  booking_vr.cpp  booking_vr_print.cpp  email.cpp  https_server.cpp  logger.cpp  main.cpp  parseInpudData.cpp  requests_handler.cpp  websocket.cpp
sql/: tables.sql  triggers.sql
test/: test_delete_data.h  test_insert_data.h  test_update_data.h
(+18 files in other folders)
